added drag to adjust position support

--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
 		<p style="display:inline-block">
             <button id="btnReset" class="active" style="cursor:pointer">Reset Position</button>
         </p>
+        <p>Hold Right-Click and Drag to move around. Hold Left-Click and Drag to follow mouse.
         </div>
         
         <div align="center">
