--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
             body{
                 margin:0px ;
                 padding:0px ;
+                background-color: #191919;
+                color: #ffffff;
             }
             
             #glcanvas {
