Fixed BG selector UI issues

--- a/index.html
+++ b/index.html
@@ -84,8 +84,7 @@
                 height: 100%;
                 width: 100%;
                 background-color: rgba(0, 0, 0, 0.5);
-                position: absolute;
-                top: 0px;
+                position: absolute;                
                 left: 0px;
             }
 
@@ -93,10 +92,9 @@
                 width: 80%;
                 height: 90%;
                 position: absolute;
-                top: 5%;
                 left: 10%;
                 background-color: white;
-                overflow-y: scroll;
+                overflow-y: auto;
                 padding: 10px;
                 border-radius: 3px;
             }
