--- a/index.html
+++ b/index.html
@@ -116,6 +116,18 @@
                 margin-left: 20px;
                 border-radius: 3px;
             }
+            #footer {
+                position: absolute;
+                height: auto;
+                width: 100%;
+                overflow: hidden;
+                left: 0;
+                background-color: #24252d;
+                color: white;
+                text-align: left;
+                padding:10px 20px 10px 20px;
+                font-size:12px;
+            }
         </style>
 
     </head>
@@ -154,6 +166,15 @@
         </div>
         
         <div id="myconsole" style="color:#000;display:none">---- Log ----</div>
+
+        <footer id="false" style="height:70px;width:100%;margin-top: 20px;">
+        </footer>
+
+        <footer id="footer">
+            All logos and trademarks are property of their respective owners.<br>
+            This is a non-profit website. Special thanks to /PMMM/.
+            For concerns and feedback, send a mail to nukeclear@cock.li
+        </footer>
 
         <!-- Live2D Library -->
         <script src="js/live2d.min.js"></script>
