--- a/index.html
+++ b/index.html
@@ -137,12 +137,30 @@
                 bottom: 0;
                 left: 0;
             }
+            table.wikitable {
+                margin: 1em 0;
+                background-color: #f2f2f2;
+                border-style: solid;
+                border-width: 1px;
+                border-color: black;
+                border-collapse: collapse;
+                color: black;
+                height: 100%;
+                width: 100%;
+            }
+            table.wikitable td {
+                border-style: solid;
+                border-width: 1px;
+                border-color: black;
+                border-collapse: collapse;
+            }
         </style>
 
     </head>
 
     <body onload="main()" align="center">
         <a href='https://ko-fi.com/K3K71DGPS' target='_blank'><img height='36' style='border:0px;height:36px; position: absolute; top: 1%; right: 1%' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+        <button type="button" class="btn btn-secondary" style="position: absolute; top: 1%; left: 1%; color: black;" onclick="onChangeLog()">Changelog</button>
         <div id="background">
         </div>
         <div align="center">
