Increase play area size. Fixed animations not playing

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-            <title>MagiReco Live2D Viewer</title>
+            <title>Magia Record Live2D Viewer</title>
         </meta>
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=0.5, minimum-scale=1.0, maximum-scale=4.0">
