--- a/sprite/index.html
+++ b/sprite/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Cocos2d-html5 Hello World test</title>
+    <title>Magia Record Sprite Viewer</title>
     <link rel="icon" type="image/GIF" href="../favicon.ico"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <meta name="full-screen" content="yes"/>
@@ -119,7 +119,7 @@
         <p id="display_name"></p>
     </div>
     <div align="center">
-        <canvas id="gameCanvas" width="800" height="450"></canvas>
+        <canvas id="gameCanvas" width="800" height="800"></canvas>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="../js/frameworks/cocos2d-html5/CCBoot.js"></script>
