Added Wakana Tsumugi. Alina, Karin Hospital outfits. Ashley Taylor voice, magia sprite.

--- a/sprite/index.html
+++ b/sprite/index.html
@@ -109,9 +109,29 @@
             margin-left: 20px;
             border-radius: 3px;
         }
+        table.wikitable {
+            margin: 1em 0;
+            background-color: #f2f2f2;
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+            border-collapse: collapse;
+            color: black;
+            height: 100%;
+            width: 100%;
+        }
+        table.wikitable td {
+            border-style: solid;
+            border-width: 1px;
+            border-color: black;
+            border-collapse: collapse;
+        }
     </style>
 </head>
 <body style="padding:0; margin: 0; background: #000;">
+    <a href='https://ko-fi.com/K3K71DGPS' target='_blank'><img height='36' style='border:0px;height:36px; position: absolute; top: 5px; right: 5px' src='https://az743702.vo.msecnd.net/cdn/kofi2.png?v=2' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>
+        <button type="button" class="btn btn-secondary" style="position: absolute; top: 5px; left: 5px; color: black; cursor: pointer" onclick="OnChangeLog()">Changelog</button>
+        <a href="../"><button type="button" style="position: absolute; top: 55px; left: 5px; color: black; background-color: #d0fbd0; cursor: pointer">Live2D Viewer</button></a>
     <div align="center">
         <p style="display:inline-block;padding-right: 10px;">
             <button id="btnCharacter" class="active" style="cursor:pointer" onclick="OnChangeCharacter()">Change Character</button>
